# general-agent

./: .gitignore  LICENSE  README.md  README.zh-CN.md  feature.md  pyproject.toml
.obsidian/: workspace.json
Note/: cli.py.md  main.py.md  message_schema.md  settings.md
src/: main.py
src/app/: __init__.py  cli.py  main.py  options.py
src/config/: __init__.py  paths.py  settings.py  user_settings.py
src/engine/: __init__.py  events.py  message_schema.py  query_engine.py  query_loop.py  turn_state.py
src/llm/: base.py  openai_adapter.py
src/runtime/: __init__.py  compaction.py  logging_utils.py  permissions.py  session_store.py  token_budget.py  usage_tracker.py
src/tools/: __init__.py  base.py  builtin.py  governance.py  registry.py  search_news.py  shell_analysis.py
src/ui/: controller.py  input_parser.py  prompt_io.py  renderer.py  repl.py
tests/: conftest.py  test_entrypoint.py  test_openai_adapter.py  test_permissions.py  test_prompt_io.py  test_query_engine.py  test_search_news.py  test_settings.py  test_token_budget.py  test_tools.py  test_ui_controller.py
