[project]
name = "general-agent"
version = "0.1.0"
description = "General Agent (将军), a general-purpose agent inspired by Claude Code architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "openai>=1.0,<3.0",
  "prompt-toolkit>=3.0,<4.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "rich>=13.0,<15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
]

[project.scripts]
general-agent = "app.cli:main"
general = "app.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
